--- a/package.json
+++ b/package.json
@@ -50,5 +50,13 @@
     "node": ">=20.0.0"
   },
   "author": "Postman, Inc.",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/postmanlabs/postman-mcp-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/postmanlabs/postman-mcp-server/issues"
+  },
+  "homepage": "https://github.com/postmanlabs/postman-mcp-server#readme"
 }
