--- a/manifest-full.json
+++ b/manifest-full.json
@@ -1,6 +1,6 @@
 {
   "dxt_version": "0.2",
-  "version": "",
+  "version": "2.2.0",
   "name": "postman-mcp-server-full",
   "display_name": "Postman MCP Server (Full)",
   "description": "A comprehensive MCP server with all available Postman API tools (106+ tools).",
