--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "prepack": "npm run build",
     "test": "vitest",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "preversion": "npm run build",
+    "version": "git add dist/",
+    "release": "npm version",
+    "release-custom": "node scripts/release.js"
   },
   "bin": "dist/src/index.js",
   "files": [
