--- a/manifest-minimal.json
+++ b/manifest-minimal.json
@@ -3,7 +3,7 @@
   "version": "2.3.3",
   "name": "postman-mcp-server-minimal",
   "display_name": "Postman MCP Server (Minimal)",
-  "description": "A minimal MCP server with essential Postman API tools (37 tools).",
+  "description": "Connect your AI to your APIs on Postman",
   "long_description": "This extension enables AI assistants to interact with the Postman API through Model Context Protocol (MCP). This minimal version includes only the essential tools for basic Postman operations, providing faster performance and simplifying use for common workflows. All secured with your Postman API key.",
   "author": {
     "name": "Postman, Inc.",
